# 14113-X-vault

./: .gitignore  Bio-Circuitry-MOC.md  Books-Master-Index.md  Consciousness-Library-Index.md  Consciousness-Noesis-MOC.md  Enneagram-Orchestration-MOC.md  GEMINI.md  General-Knowledge-Library-Index.md  Health-Library-Index.md  Occult-Library-Index.md  PRANA_CONTEXT.md  README.md  Skills-Development-Library-Index.md  Somatic-Narrative-MOC.md  System-MOC.md  Technical-Mystical-MOC.md  Technology-Library-Index.md  vmem
.claude/skills/: KOSHA_SKILL_MAPPING.md  README.md  memory.md  phase5-completion-summary.md  todo.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
.planning/reports/: maintenance_status.json
.planning/vault/: CONCERNS.md  (+7 more)
01-Projects/: Brandmint-Engine.md  Brandmint-Showcase.md  Entrodromia-Logic.md  Kopina-Docs.md  Kopina-Wiki.md  KriStudios.md  Noesis-Public-Portal.md  Phassion-Master.md  Selemene-Kernel.md  Thoughtseed-Labs.md  Tryambakam-Oasis.md
01-Projects/reddit-cli/: .gitignore  README.md  pyproject.toml
03-Resources/: README.md  _index.md
04-Archives/: AIPRM-export-chatgpt-thread_WITNESS-OS-Consciousness-OS-Exploration_2026-02-01T08_02_01.457Z.md  AIPRM-export-chatgpt-thread_WITNESS-OS-Wallpaper-space-curation_2026-02-01T08_00_24.930Z.md  CLEANUP-PLAN.md  Pending-X-Actions-2026-01-31.md  TOOLS.md  WEEK-1-TWITTER-LAUNCH-PACKET.md  memory_somatic.md  todo_somatic.md
_System/: AIPRM-export-chatgpt-thread_Acousmaticos-Numerology-Interpretation_2026-02-01T07_59_10.641Z.md  README.md  SKILLS-REFERENCE.md  TAXONOMY-REFERENCE.md  index.md
(+5505 files in other folders)
