[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-cli"
version = "0.1.0"
description = "Deterministic Reddit CLI for read and publish workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sheshnarayan Iyer" }]
dependencies = [
  "praw>=7.7.1",
  "requests>=2.32.0",
]

[project.scripts]
reddit-cli = "reddit_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
